@startuml
class Frankencoin {
    reserve : Equity
    PositionFactory : positionFactory
}
Frankencoin --> "1" Equity : deploys
class Equity {
    zchf: Frankencoin
}
Reserve <|-- Equity : "inherits"
class MintingHub {
    zchf : IFrankencoin
    POSITION_FACTORY : IPositionFactory
}

class StablecoinBridge {
    chf : IERC20
    zchf: IFrankencoin
}

class PositionFactory {
    createNewPosition()
    clonePosition()
}
PositionFactory --> "n" Position : deploys
class Position {
    zchf: IFrankencoin
    collateral: IERC20
}
note "Parent contracts: ERC20, IFrankencoin, IERC20, \n IERC20Receiver, IPosition, IReserve, Reserve, MathUtil, Ownable" as N1
@enduml